# hunt-showdown-app

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  process_images.py
data/: consumables.json  tools.json  weapons.json
raw_images/bullets/: Arrow.xcf  ArrowConcertina.xcf  ArrowFrag.xcf  ArrowPoison.xcf  Bolt.xcf  BoltChaos.xcf  BoltChoke.xcf  BoltPoison.xcf  Compact.xcf  CompactDumDum.xcf  CompactFullMetalJacket.xcf  CompactHighVelocity.xcf  CompactIncendiary.xcf  CompactPoison.xcf  CrossbowBolt.xcf  CrossbowExplosive.xcf  CrossbowShotbolt.xcf  DerringerBullet.xcf  Dolch96.xcf  Long.xcf  LongExplosive.xcf  LongFullMetalJacket.xcf  LongIncendiary.xcf  LongPoison.xcf  LongSpitzer.xcf  Medium.xcf  MediumDumDum.xcf  MediumExplosive.xcf  MediumFullMetalJacket.xcf  MediumHighVelocity.xcf  MediumIncendiary.xcf  MediumPoison.xcf  Nitro.xcf  NitroExplosive.xcf  NitroShredder.xcf  Shell.xcf  ShellDragonBreath.xcf  ShellFlechette.xcf  ShellPennyShot.xcf  ShellSlug.xcf  (+1 more)
raw_images/consumables/: AmmoBox.xcf  AntidoteShot.xcf  AntidoteShotWeak.xcf  BigDynamiteBundle.xcf  ChaosBomb.xcf  ConcertinaBomb.xcf  DynamiteBundle.xcf  DynamiteStick.xcf  FireBomb.xcf  FlashBomb.xcf  FragBomb.xcf  HellfireBomb.xcf  HiveBomb.xcf  LiquidFireBomb.xcf  PoisonBomb.xcf  RegenerationShot.xcf  RegenerationShotWeak.xcf  StalkerBeetle.xcf  StaminaShot.xcf  StaminaShotWeak.xcf  StickyBomb.xcf  VitalityShot.xcf  VitalityShotWeak.xcf  WaxedDynamiteStick.xcf
raw_images/icons/: BloodBonds.xcf  BloodlineRank.xcf  HuntDollars.xcf  Lock_Icon.xcf  Prestige.xcf  TrialStars.xcf
raw_images/status_icons/: Antidote.xcf  BasicMelee.xcf  Blunt.xcf  Explosion.xcf  FireIntense.xcf  FireLight.xcf  FireMedium.xcf  Heal.xcf  HeavyMelee.xcf  Light.xcf  Noisy.xcf  Piercing.xcf  Placeable.xcf  PoisonIntense.xcf  PoisonMedium.xcf  RendingIntense.xcf  RendingLight.xcf  RendingMedium.xcf  Silenced.xcf  (+2 more)
scss/: index.scss
src/: main.rs
(+135 files in other folders)
