[package]
name = "yew-app"
version = "0.1.0"
authors = ["June (ProfessorChill)"]
edition = "2021"
description = "A frontend website for creating random loadouts for the video game Hunt: Showdown by Crytek™"
readme = "README.md"
repository = "https://github.com/ProfessorChill/hunt-showdown-app"
homepage = "https://professorchill.github.io/"
license = "MIT OR Apache-2.0"
keywords = ["website", "fun", "hunt_showdown"]
categories = ["games", "wasm"]

[dependencies]
lazy_static = "1"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
